--- a/app/views/static_pages/_contact_member.html.erb
+++ b/app/views/static_pages/_contact_member.html.erb
@@ -5,7 +5,7 @@
             <span class="image">
               <h3 class="postition-front-title"><%= user_name(user) %></h3>
               <%= image_tag "info.png", class: "postition-front-flip-icon" %>
-              <%= image_tag profile_picture(user), class:"user_img contact_img" %>
+              <%= image_tag profile_picture(user), class:"user_img contact_img", align: 'middle' %>
             </span>
             <span class="back contact-back-background" >
               <h3>Account Info</h3>
