--- a/app/views/static_pages/_contact_position.html.erb
+++ b/app/views/static_pages/_contact_position.html.erb
@@ -8,7 +8,7 @@
                 <%= title(position.role.name) %>
               </h3>
               <%= image_tag "info.png", class: "postition-front-flip-icon" %>
-              <%= image_tag profile_picture(position.user), class:"user_img contact_img" %>
+              <%= image_tag profile_picture(position.user), class:"user_img contact_img", align: 'middle' %>
             </span>
             <span class="back contact-back-background" >
               <h3><%= title(position.role.name) %></h3>
