--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -35,7 +35,7 @@
         <div class="col-md-5 col-md-offset-1">
           <%= raw @event.description %>
           <p>
-            <%= @event.user.first_name %> <%= @event.user.last_name %> created thins event
+            <%= @event.user.first_name %> <%= @event.user.last_name %> created this event
           </p>
         </div>
 
