--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -35,3 +35,19 @@
   </ul>
   <div class="clear"> </div>
 </div>
+
+<script>
+    (function() {
+        var cards = document.querySelectorAll(".contact_card.effect__click");
+        for ( var i  = 0, len = cards.length; i < len; i++ ) {
+            var card = cards[i];
+            clickListener( card );
+        }
+        function clickListener(card) {
+            card.addEventListener( "click", function() {
+                var c = this.classList;
+                c.contains("flipped") === true ? c.remove("flipped") : c.add("flipped");
+            });
+        }
+    })();
+</script>
