updated look and title of search users

--- a/app/views/users/search_users.html.erb
+++ b/app/views/users/search_users.html.erb
@@ -1,8 +1,9 @@
 <div class="row">
-  <div class="col-md-8 col-md-offset-2 top-card-padding">
+  <div class="col-md-10 col-md-offset-1 top-card-padding">
     <div class="card">
       <div id="page-wrap">
         <div align="center">
+          <h1>Brothers Contact Info</h1>
           <%= search_form_for @search, url: search_users_path do |f| %>
               <div class="field">
                 <%= f.text_field :first_name_cont, placeholder: 'Search by First Name'  %>
