fixed small issues

--- a/app/views/users/search_users.html.erb
+++ b/app/views/users/search_users.html.erb
@@ -10,7 +10,7 @@
                 <%= f.text_field :last_name_cont, placeholder: 'Search by Last Name'  %>
                 <%= f.search_field :phone_number_cont, placeholder: 'Search by Phone Number' %>
                 <%= f.search_field :email_cont, placeholder: 'Search by Email' %>
-                <%= f.search_field :user_status_cont, placeholder: 'Search by Email' %>
+                <%= f.search_field :user_status_cont, placeholder: 'Search by Current Status' %>
               </div>
               <div class="actions potentials-inline">
                 <%= f.submit "Search Brothers" %>
