updated standards board

--- a/app/views/standards_boards/new.html.erb
+++ b/app/views/standards_boards/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New standards_board</h1>
+<h1>New standards board submission</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-xl-10 col-md-10 col-xs-10 col-xl-offset-1 col-md-offset-1 col-xs-offset-1">
+    <div class="card">
+      <%= render 'form' %>
 
-<%= link_to 'Back', standards_boards_path %>
+      <%= link_to 'Back to submissions', standards_boards_path %>
+    </div>
+  </div>
+</div>
