--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -855,6 +855,12 @@ only screen and (max-width: 760px),
   .yes-bids-table td:nth-of-type(1):before { content: "Name"; }
   .yes-bids-table td:nth-of-type(2):before { content: "Phone Number"; }
   .yes-bids-table td:nth-of-type(3):before { content: "Where they live"; }
+
+  .standards-board-table td:nth-of-type(1):before { content: "User"; }
+  .standards-board-table td:nth-of-type(2):before { content: "Reason"; }
+  .standards-board-table td:nth-of-type(3):before { content: "Position"; }
+  .standards-board-table td:nth-of-type(2):before { content: "Show"; }
+  .standards-board-table td:nth-of-type(3):before { content: "Edit"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
