--- a/app/views/standards_boards/_form.html.erb
+++ b/app/views/standards_boards/_form.html.erb
@@ -1,29 +1,29 @@
 <%= form_for(@standards_board) do |f| %>
-  <% if @standards_board.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@standards_board.errors.count, "error") %> prohibited this standards_board from being saved:</h2>
+    <% if @standards_board.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@standards_board.errors.count, "error") %> prohibited this standards_board from being saved:</h2>
 
-      <ul>
-      <% @standards_board.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @standards_board.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+    <div style="margin: 0;" class="col-xl-5 col-md-5 col-sm-5 col-xs-12 col-xl-offset-1 col-md-offset-1 col-sm-offset-1">
+      <%= f.label :user, 'Person Being Reported' %><br>
+      <%= f.collection_select :user_id, @users, :id, :name %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :user %><br>
-    <%= f.text_field :user %>
-  </div>
-  <div class="field">
-    <%= f.label :reason %><br>
-    <%= f.text_area :reason %>
-  </div>
-  <div class="field">
-    <%= f.label :position %><br>
-    <%= f.text_field :position %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div style="margin: 0;" class="col-xl-5 col-md-5 col-sm-12 col-xl-offset-1 col-md-offset-1 col-sm-offset-1">
+      <%= f.label :position, 'Select Position that you are reporting from' %><br>
+      <%= f.collection_select :position_id, current_user.positions, :id, :position_name %>
+    </div>
+    <div class="clearfix"></div>
+    <div class="field" align="center">
+      <%= f.label :reason %><br>
+      <%= f.cktext_area :reason %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 <% end %>
