--- a/app/views/standards_boards/index.html.erb
+++ b/app/views/standards_boards/index.html.erb
@@ -1,31 +1,36 @@
-<h1>Listing standards_boards</h1>
+<div class="row">
+  <div class="col-xl-10 col-md-10 col-xs-10 col-xl-offset-1 col-md-offset-1 col-xs-offset-1">
+    <div class="card">
+      <h1>Standards Board Submissions</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Reason</th>
-      <th>Position</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+      <%= link_to 'New Standards Board Submission', new_standards_board_path %>
 
-  <tbody>
-    <% @standards_boards.each do |standards_board| %>
-      <tr>
-        <td><%= standards_board.user %></td>
-        <td><%= standards_board.reason %></td>
-        <td><%= standards_board.position %></td>
-        <td><%= link_to 'Show', standards_board %></td>
-        <td><%= link_to 'Edit', edit_standards_board_path(standards_board) %></td>
-        <td><%= link_to 'Destroy', standards_board, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table class="standards-board-table">
+        <thead>
+        <tr>
+          <th>User</th>
+          <th>Reason</th>
+          <th>Position</th>
+          <th>Show</th>
+          <th>Edit</th>
+        </tr>
+        </thead>
 
-<br>
+        <tbody>
+        <% @standards_boards.each do |standards_board| %>
+            <tr>
+              <td><%= standards_board.user %></td>
+              <td><%= standards_board.reason %></td>
+              <td><%= standards_board.position %></td>
+              <td><%= link_to 'Show', standards_board %></td>
+              <td><%= link_to 'Edit', edit_standards_board_path(standards_board) %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
 
-<%= link_to 'New Standards board', new_standards_board_path %>
+      <br>
+    </div>
+  </div>
+</div>
+
