--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -18,8 +18,10 @@
             <div class="resources col-md-6">
               <div style="color: #736f7e">
                 <h2>Calendar</h2>
-                <h3><%= link_to 'Create New Event', new_event_path, data: { no_turbolink: true } %></h3>
                 <h3><%= link_to 'View Calendar', events_path %></h3>
+                <% if current_user.multiple_have_permissions?(['admin','president','philanthropy','community_service','recruitment']) %>
+                    <h3><%= link_to 'Create New Event', new_event_path, data: { no_turbolink: true } %></h3>
+                <% end %>
               </div>
               <hr>
             </div>
@@ -36,10 +38,20 @@
               <hr>
             </div>
         <% end %>
+        <% if current_user.confirmed_brother? %>
+            <div class="resources col-md-6">
+              <div style="color: #736f7e">
+                <h2>Standards-Board</h2>
+                <h3><%= link_to 'Recent Submits', standards_boards_path %></h3>
+                <h3><%= link_to 'Submit Brother to Standards Board', new_standards_board_path, data: { no_turbolink: true } %></h3>
+              </div>
+              <hr>
+            </div>
+        <% end %>
         <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp']) %>
             <div class="resources col-md-6">
               <div style="color: #736f7e">
-                <h2>Static Pages</h2>
+                <h2>Website-Pages</h2>
                 <h3><%= link_to 'FAQ Categories', faq_categories_path %></h3>
                 <h3><%= link_to 'FAQ Questions', faq_questions_path %></h3>
               </div>
@@ -70,10 +82,12 @@
             <div class="resources col-md-6">
               <div style="color: #736f7e">
                 <h2>Community Service</h2>
-                <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
                 <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
                 <h3><%= link_to 'Submit Community Service Hours', new_community_service_path %></h3>
-                <h3><%= link_to 'Manually Enter Community Service', community_service_manually_path, 'data-no-turbolink' => true %></h3>
+                <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp','community_service']) %>
+                    <h3><%= link_to 'Manually Enter Community Service', community_service_manually_path, 'data-no-turbolink' => true %></h3>
+                    <h3><%= link_to 'Latest Community Service Hours', community_services_path %></h3>
+                <% end %>
                 <!--  'data-no-turbolink' => true makes sure things aren't cached -->
               </div>
               <hr>
