updated standards board

--- a/app/views/standards_boards/_form.html.erb
+++ b/app/views/standards_boards/_form.html.erb
@@ -23,7 +23,7 @@
       <%= f.label :reason %><br>
       <%= f.cktext_area :reason %>
     </div>
-    <div class="actions">
-      <%= f.submit %>
+    <div class="actions" align="center">
+      <%= f.submit 'Update Standards Board' %>
     </div>
 <% end %>
