--- a/app/views/standards_boards/edit.html.erb
+++ b/app/views/standards_boards/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing standards_board</h1>
+<h1>Editing Standards Board Submission</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-xl-10 col-md-10 col-xs-10 col-xl-offset-1 col-md-offset-1 col-xs-offset-1">
+    <div class="card">
+      <%= render 'form' %>
 
-<%= link_to 'Show', @standards_board %> |
-<%= link_to 'Back', standards_boards_path %>
+      <%= link_to 'Show', @standards_board %> |
+      <%= link_to 'Back', standards_boards_path %>
+    </div>
+  </div>
+</div>
