--- a/app/views/standards_boards/index.html.erb
+++ b/app/views/standards_boards/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xl-10 col-md-10 col-xs-10 col-xl-offset-1 col-md-offset-1 col-xs-offset-1">
     <div class="card">
-      <h1>Standards Board Submissions</h1>
+      <h1>Standards Board Not Handled Submissions</h1>
 
       <%= link_to 'New Standards Board Submission', new_standards_board_path %>
 
@@ -13,17 +13,60 @@
           <th>Position</th>
           <th>Show</th>
           <th>Edit</th>
+          <th>Complete?</th>
         </tr>
         </thead>
 
         <tbody>
-        <% @standards_boards.each do |standards_board| %>
+        <% @unhandled.each do |standards_board| %>
             <tr>
-              <td><%= standards_board.user %></td>
-              <td><%= standards_board.reason %></td>
-              <td><%= standards_board.position %></td>
+              <td><%= standards_board.user.name %></td>
+              <td><%= raw standards_board.reason %></td>
+              <td><%= standards_board.position.position_name %></td>
               <td><%= link_to 'Show', standards_board %></td>
               <td><%= link_to 'Edit', edit_standards_board_path(standards_board) %></td>
+              <td><%= link_to standards_board_updated_completed_path(standards_board), method: :put do %>
+                  <i class="glyphicon glyphicon-check"></i>
+              <% end %>
+              </td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+      <br>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="card">
+      <h1>Standards Board Handled Submissions</h1>
+
+      <table class="standards-board-table">
+        <thead>
+        <tr>
+          <th>User</th>
+          <th>Reason</th>
+          <th>Position</th>
+          <th>Show</th>
+          <th>Edit</th>
+          <th>Complete?</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <% @handled.each do |standards_board| %>
+            <tr>
+              <td><%= standards_board.user.name %></td>
+              <td><%= raw standards_board.reason %></td>
+              <td><%= standards_board.position.position_name %></td>
+              <td><%= link_to 'Show', standards_board %></td>
+              <td><%= link_to 'Edit', edit_standards_board_path(standards_board) %></td>
+              <td><%= link_to standards_board_updated_completed_path(standards_board), method: :put do %>
+                    <i class="glyphicon glyphicon-unchecked"></i>
+                <% end %>
+              </td>
             </tr>
         <% end %>
         </tbody>
