--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -1,6 +1,12 @@
 <h1>Editing attendance</h1>
+<div class="row">
+  <div class="col-xl-8 col-md-8 col-xs-8 col-xl-offset-4 col-md-offset-2 col-xs-offset-2">
+    <div class="card">
 
-<%= render 'form' %>
+      <%= render 'form' %>
 
-<%= link_to 'Show', @attendance %> |
-<%= link_to 'Back', attendances_path %>
+      <%= link_to 'Show', @attendance %> |
+      <%= link_to 'Back', attendances_path %>
+    </div>
+  </div>
+</div><
