--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -1,3 +1,4 @@
+<p>* Each attendance is created automatically after an event is created</p>
 <div class="row">
   <div class="col-xl-8 col-md-8 col-xs-8 col-xl-offset-4 col-md-offset-2 col-xs-offset-2">
     <div class="card">
