--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -19,8 +19,11 @@
               <div style="color: #736f7e">
                 <h2>Calendar</h2>
                 <h3><%= link_to 'View Calendar', events_path %></h3>
-                <% if current_user.multiple_have_permissions?(['admin','president','philanthropy','community_service','recruitment']) %>
+                <% if current_user.multiple_have_permissions?(['admin','president','philanthropy','community_service','recruitment', 'secretary']) %>
                     <h3><%= link_to 'Create New Event', new_event_path, data: { no_turbolink: true } %></h3>
+                <% end %>
+                <% if current_user.multiple_have_permissions?(['admin','president','philanthropy','community_service','recruitment', 'secretary']) %>
+                    <h3><%= link_to 'Attendance', attendances_path %></h3>
                 <% end %>
               </div>
               <hr>
