--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -81,7 +81,7 @@
               <hr>
             </div>
         <% end %>
-        <% if current_user.multiple_have_permissions?(['admin','community_service','president','second_vp']) %>
+        <% if current_user.multiple_have_permissions?(['associate member', 'current brother', 'coop']) %>
             <div class="resources col-md-6">
               <div style="color: #736f7e">
                 <h2>Community Service</h2>
