galleries now have thumbnails

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -6,7 +6,7 @@
 </div>
   <div class="gallery_images">
 <% @gallery.images.each do |image| %>
-        <a  href='<%= image.picture_url %>' data-title='<%= image.name %>' rel="lightbox[<%= @gallery.name %>]"><img src="<%= image.picture_url %>" /></a>
+        <a  href='<%= image.picture_url(:thumb) %>' data-title='<%= image.name %>' rel="lightbox[<%= @gallery.name %>]"><img src="<%= image.picture_url(:thumb) %>" /></a>
 <% end %>
 </div>
 </div>
