--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,6 +14,7 @@
     <% end %>
   </div>
 </div>
+<div class="clearfix"></div>
 <div class="col-md-6 center-paginate">
   <div align="center">
     <h3>
