--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
 <body>
 <div id="wrapper">
   <div id="header"><%= render 'layouts/header' %></div>
+  <div class="clearfix"></div>
+  <% if current_page?(root_url) %>
+      <div class="col-xl-8 col-md-8 col-xs-12 col-xl-offset-2 col-md-offset-2">
+        <div class="card-temp">
+          Come join us for the 50th anniversary this April 1st to the 3rd. For more information <%= link_to 'click here!', fiftieth_info_path%>
+        </div>
+      </div>
+  <% end %>
   <div class="container">
     <% flash.each do |name, msg| %>
         <% if name == :alert %>
