--- a/app/views/static_pages/fiftieth_info.html.erb
+++ b/app/views/static_pages/fiftieth_info.html.erb
@@ -1,4 +1,122 @@
-hotel info
-contact info
-    pres - alumi rel - garys
-schedule
+<div class="col-xl-8 col-md-8 col-xs-12 col-xl-offset-2 col-md-offset-2">
+  <div class="card">
+    <div>
+      <h1>Hotel Info</h1>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>We have cut a deal with the RIT Inn so that brothers can get a room there for XX dollars. The Inn will allow XX number of people per rooms</p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>The RIT Inn's Information can be found below. RIT is also hosting an accepted students open house that same weekend. We highly recommend buying your rooms well in advance.</p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>Phone Number: (585) 359-1800</p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>Address: 5257 W Henrietta Rd, Henrietta, NY 14467</p>
+    </div>
+    <hr>
+    <div>
+      <h1>Contact Info</h1>
+      <table class="fifth-contacts-table">
+        <tr>
+          <th>Position</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Phone Number</th>
+          <th>Email</th>
+        </tr>
+        <tr>
+          <td>President</td>
+          <td>Mark</td>
+          <td>Eddy</td>
+          <td>(413) 281 - 2842</td>
+          <td>mark.eddy2121@gmail.com</td>
+        </tr>
+        <tr>
+          <td>Adviser</td>
+          <td>Gary</td>
+          <td>Proud</td>
+          <td>(585) 544 - 0444 </td>
+          <td>TheDonAtGammaNu@aol.com</td>
+        </tr>
+        <tr>
+          <td>Adviser</td>
+          <td>Gary</td>
+          <td>Gasper</td>
+          <td>(585) 334 - 8383</td>
+          <td>garymgasper@gmail.com</td>
+        </tr>
+        <tr>
+          <td>Alumni Relations</td>
+          <td>Paul</td>
+          <td>Darragh</td>
+          <td>(508) 838 - 8579</td>
+          <td>alumni_relations@gammanu.org</td>
+        </tr>
+      </table>
+    </div>
+    <hr>
+    <div>
+      <h1>Weekend Schedule</h1>
+      <table class="fifth-events-table">
+        <tr>
+          <th>Name</th>
+          <th>Location</th>
+          <th>Time</th>
+        </tr>
+        <tr>
+          <td>A Toast to Gamma Nu</td>
+          <td>Chapter Mansion, 604 Charters Way</td>
+          <td>3:30pm–4:30pm</td>
+        </tr>
+        <tr>
+          <td>BBQ dinner</td>
+          <td>Chapter Mansion, 604 Charters Way</td>
+          <td>6:00pm–9:00pm</td>
+        </tr>
+        <tr>
+          <td>Boiler Room</td>
+          <td>TBD</td>
+          <td>10:00pm</td>
+        </tr>
+        <tr>
+          <td>Golf Tournament</td>
+          <td>TBD</td>
+          <td>10:00am</td>
+        </tr>
+        <tr>
+          <td>Morning Tour of Campus</td>
+          <td>Chapter Mansion, 604 Charters Way</td>
+          <td>11:00am</td>
+        </tr>
+        <tr>
+          <td>Tour of Downtown Former Campus</td>
+          <td>Chapter Mansion, 604 Charters Way</td>
+          <td>11:00am</td>
+        </tr>
+        <tr>
+          <td>Afternoon Tour of campus</td>
+          <td>Chapter Mansion, 604 Charters Way</td>
+          <td>2:00pm</td>
+        </tr>
+        <tr>
+          <td>Banquet Reception</td>
+          <td>University Gallery, RIT Campus</td>
+          <td>6:00pm</td>
+        </tr>
+        <tr>
+          <td>Banquet Dinner</td>
+          <td>University Gallery, RIT Campus</td>
+          <td>7:00pm</td>
+        </tr>
+        <tr>
+          <td>Continental breakfast And Goodbyes</td>
+          <td>Chapter Mansion, 604 Charters Way</td>
+          <td>10:00am–1:00pm</td>
+        </tr>
+      </table>
+    </div>
+    <hr>
+    <div>
+      <h1>$50,000 For 50 Years Fundraiser!</h1>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;">Brothers –</span></p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;">50 Years. A golden anniversary. A milestone worthy of celebration.</span></p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;">Let that number to sink in for a minute. Think about what that means - for an organization, an institution, to celebrate 50 years?</span></p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;">For more information about the 50th you can <a href="../../gamma_nu_50th_anniversary">read more here</a></span></p>
+    </div>
+  </div>
+</div>
+<div class="clearfix"></div>
