--- a/app/views/static_pages/gamma_nu_50th_anniversary.html.erb
+++ b/app/views/static_pages/gamma_nu_50th_anniversary.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 top-card-padding">
+  <div class="col-xl-8 col-md-8 col-xs-12 col-xl-offset-2 col-md-offset-2">
     <div class="card">
       <p class="western" style="margin-bottom: 0in; line-height: 100%">Brothers &ndash;</p>
 
