--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -870,6 +870,16 @@ only screen and (max-width: 760px),
   .standards-board-table td:nth-of-type(3):before { content: "Position"; }
   .standards-board-table td:nth-of-type(2):before { content: "Show"; }
   .standards-board-table td:nth-of-type(3):before { content: "Edit"; }
+
+  .fifth-contacts-table td:nth-of-type(1):before { content: "Position"; }
+  .fifth-contacts-table td:nth-of-type(2):before { content: "First Name"; }
+  .fifth-contacts-table td:nth-of-type(3):before { content: "Last Name"; }
+  .fifth-contacts-table td:nth-of-type(4):before { content: "Phone Number"; }
+  .fifth-contacts-table td:nth-of-type(5):before { content: "Email"; }
+
+  .fifth-events-table td:nth-of-type(1):before { content: "Name"; }
+  .fifth-events-table td:nth-of-type(3):before { content: "Location"; }
+  .fifth-events-table td:nth-of-type(2):before { content: "Time"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
