added some information for the 50th

--- a/app/views/static_pages/fiftieth_info.html.erb
+++ b/app/views/static_pages/fiftieth_info.html.erb
@@ -2,7 +2,7 @@
   <div class="card">
     <div>
       <h1>Hotel Info</h1>
-      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>We have cut a deal with the RIT Inn so that brothers can get a room there for XX dollars. The Inn will allow XX number of people per rooms</p>
+      <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>We have cut a deal with the RIT Inn so that brothers can get a room there for 74 dollars. with the 14% tax it brings it to about 84 dollars. The Inn will allow 5 people per rooms</p>
       <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>The RIT Inn's Information can be found below. RIT is also hosting an accepted students open house that same weekend. We highly recommend buying your rooms well in advance.</p>
       <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>Phone Number: (585) 359-1800</p>
       <p><span style="font-size: 14pt; font-family: arial, helvetica, sans-serif;"></span>Address: 5257 W Henrietta Rd, Henrietta, NY 14467</p>
