--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -37,13 +37,13 @@
 
       <div class="clear"></div>
       
+        <%= f.fields_for :images, @post.images.last do |image_fields| %>
       <div class="field">
-        <%= f.fields_for :image, @post.image do |image_fields| %>
           <%= image_fields.text_field :name, placeholder: 'Picture Name' %><br>
           <%= image_fields.file_field :picture, placeholder: 'Image File' %><br>
           <%= image_fields.text_field :remote_picture_url, placeholder: 'Or input url of photo' %><br>
           <p>Photot Gallery</p>
-          <%= image_fields.collection_select :gallery_id, @galleries, :id, :name, :include_blank => true, class: 'col-md-3' %>
+          <%= image_fields.collection_select :gallery_id, Gallery.all.reverse, :id, :name, :include_blank => true, class: 'col-md-3' %>
       <% end %>
     </div>
   
