--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,17 +1,22 @@
 <h1>Listing images</h1>
 <div class="clear">
-<% if can? :create, :galleries %>
-    <%= link_to 'New Image', new_image_path %>
-<% end %>
+  <% if can? :create, :galleries %>
+      <%= link_to 'New Image', new_image_path %>
+  <% end %>
 </div>
 
-<% @images.each do |image| %>
-  <div class="clear">
-    <%= link_to (image_tag image.picture_url), image_path(image.id), class: 'image_images' %>
-    <%= link_to 'Edit', edit_image_path(image), 'data-no-turbolink' => true  %>
-    <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
-  </div>
-<% end %>
-
-<br>
-
+<div class="gallery_images">
+  <% @images.each do |image| %>
+      <div style="display: inline-block">
+        <div class="square" align="center">
+          <%= link_to (image_tag image.picture_url(:thumb)), image_path(image), class: 'image_images' %>
+        </div>
+        <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp']) %>
+        <div style="background: #D0CDCD; border-top: 1px solid black" align="center">
+          <%= link_to 'Edit', edit_image_path(image), 'data-no-turbolink' => true  %> |
+          <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
+        <% end %>
+      </div>
+  <% end %>
+</div>
